[metadata]
name = dspy
version = attr: dspy.__version__
description = Data Structures with Python (Practice)
long_description = file: README.md, LICENSE
license = Apache Software License
keywords = python, data structures, algorithms
url = https://github.com/ademyanchuk/dspy
author = Alexey Demyanchuk
author_email = alexeydemyanchuk@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

python_requires = >=3.8

# [options.entry_points]
# console_scripts =
#  Entry points goes here
#     script = src.script:main

[options.extras_require]
dev =
    pre-commit >= 2.14
    black >= 21.5b
    flake8 >= 3.9
    isort >= 5.9
    pytest >= 6.2
